...


WARNING:

Following changes may create regressions for some external modules, but were necessary to make Dolibarr better:
* The property ->brouillon has been removed from all classes. It was not reliable and was a duplicate of ->status == self::STATUS_DRAFT.
* The duplicated and deprecated property ->date_livraison that was renamed into ->delivery_date has been completely removed.
* The method get_substitutionarray_shipment_lines() has been removed. Use the generic get_substitutionarray_lines() instead.
* The method ProductcustomerPrice->fetch_all_log() has been renamed into camel case ->fetchAllLog()
* Recheck setup of your module workflow to see if you need to enable the new setting to have shipment set to billed automatically when
  an invoice from a shipment is validated (and if your process is to make invoice on shipment and not on order), because this setup has changed.
* It was possible to use a variable $soc or $right inside a php code condition of some extrafields properties, this is no more true (this 2 variables are no more defined globaly).



***** ChangeLog for 18.0.2 compared to 18.0.1 *****
FIX: 17.0 PHP8: supplier invoice class
FIX: #24908 #25824
FIX: #25780 Various payment - List - Fatal error on PHP8.x
FIX: #25884
FIX: #25919
FIX: #25934 #25929
FIX: Accountancy - Update Quadra export format
FIX: add field "entity" only in $tabfieldinsert
FIX: add warning in the changelog
FIX: Avoid duplicate popup when popup setup to work as ajax
FIX: avoid excess line breaks
FIX: removed some php8 warning
FIX: avoid wrong backtopage url
FIX: bad check return for sendfile
FIX: Bad choice of filter on product/service
FIX: bad from and to
FIX: Bad length for value
FIX: Bad value of accounting account shown in list. Edit fails.
FIX: batch to update non valid backlink check
FIX: better sql request for all cases
FIX: Can't access to rec supplier invoice card
FIX: Can't delete a fourn commande row if a commande ligne is linked