@@ -725,9 +725,7 @@ class ProductFournisseurPrice extends CommonObject
 				}
 
 				if ($obj->fk_user_cloture) {
-					$cluser = new User($this->db);
-					$cluser->fetch($obj->fk_user_cloture);
-					$this->user_cloture = $cluser;
+					$this->user_closing_id = $obj->fk_user_cloture;
 				}
 
 				$this->date_creation     = $this->db->jdate($obj->datec);
